Fix introduction block teaser image spacing.

--- a/docroot/sites/all/themes/custom/virginsport/src/scss/style/components/_vs-introduction.scss
+++ b/docroot/sites/all/themes/custom/virginsport/src/scss/style/components/_vs-introduction.scss
@@ -30,7 +30,7 @@ vs-introduction,
 }
 
 .vs-introduction__content {
-    margin-top: .625rem;
+    padding-top: .625rem;
     margin-right: -.938rem;
     margin-left: -.938rem;
 }
@@ -42,7 +42,9 @@ vs-introduction,
 @include media-breakpoint-up(md) {
 
     .vs-introduction__content {
-        margin: 4.063rem 0 2.5rem 0;
+        padding: 4.063rem 0 2.5rem;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .vs-hidden-hdpi {
